[tool.poetry]
name = "ctci"
version = "0.1.0"
description = "juanmirock's answers on CtCI (6th-Edition) for Python3"
authors = ["Dr. Juan Miguel Cejuela <i@juanmi.rocks>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pyflakes = "^3.0.1"
bandit = "^1.7.5"
black = "^23.3.0"
pytest = "^7.3.2"

[tool.pytest.ini_options]
testpaths = [
  "ctci/ch*/q*"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
